<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_8"
    tools:context=".GeocoderActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_from_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/get_from_location"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_from_location"
        android:layout_centerInParent="true"
        android:text="@string/get_from_location_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_location_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_location_name"
        android:layout_centerInParent="true"
        android:text="@string/get_from_location_name_1"/>

</RelativeLayout>
