<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_8"
    tools:context=".LocationBaseActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_location_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_option_1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_location_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/location_option_2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_location_1"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/label_latitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_location_1"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_toEndOf="@id/label_latitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_latitude"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/label_longitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_latitude"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_toEndOf="@id/label_longitude"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_longitude"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/label_address"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_longitude"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_toEndOf="@id/label_address"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_location_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_address"
        android:layout_marginTop="@dimen/dp_16"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/location_option_2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_latitude_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_option_2"
        android:layout_marginTop="@dimen/dp_16"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_longitude_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_latitude_2"
        android:layout_marginTop="@dimen/dp_8"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_address_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_longitude_2"
        android:layout_marginTop="@dimen/dp_8"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_provider_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_address_2"
        android:layout_marginTop="@dimen/dp_16"/>
</RelativeLayout>
